seiranar mission & mission mods localisation

--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -68,6 +68,41 @@
  place_to_live_desc:0 ""
  a_grand_century_title:0 "A Grand Century"
  a_grand_century_desc:0 ""
+ bridge_gerudia_title:0 "Bridge to Gerudia"
+ bridge_gerudia_desc:0 ""
+ northern_fate_title:0 "Northern Fate"
+ northern_fate_desc:0 ""
+ our_own_sea_title:0 "Our Own Sea"
+ our_own_sea_desc:0 ""
+ bring_in_halflings_title:0 "Bring in Halflings"
+ bring_in_halflings_desc:0 ""
+ aurotras_line_title:0 "Aurotras Line"
+ aurotras_line_desc:0 ""
+ lunarid_spies_title:0 "Lunarid Spies"
+ lunarid_spies_desc:0 ""
+ splendid_isolation_title:0 "Splendid Isolation"
+ splendid_isolation_desc:0 ""
+ a_grand_choice_title:0 "A Grand Choice"
+ a_grand_choice_desc:0 ""
+ on_our_own_title:0 "On Our Own"
+ on_our_own_desc:0 ""
+ on_our_own_empire_title:0 "Empire of Aurora"
+ on_our_own_empire_desc:0 ""
+ unbreakable_line_title:0 "Unbreakable Line"
+ unbreakable_line_desc:0 ""
+ fiogram_purchase_title:0 "Fiorgam Purchase"
+ fiogram_purchase_desc:0 ""
+ the_crown_title:0 "The Crown"
+ the_crown_desc:0 ""
+ four_cities_title:0 "Four Cities"
+ four_cities_desc:0 ""
+ their_throne_title:0 "Their Throne"
+ their_throne_desc:0 ""
+ aurora_anbennar_title:0 "Aurora of Anbennar"
+ aurora_anbennar_desc:0 ""
+ 
+ 
+ 
 
  #Reforms
  seiranari_monarchy_reform:0 "Seiranari Monarchy"
@@ -104,6 +139,26 @@
  seiran_serpent_batteries:0 "Serpent Batteries"
  seiran_toothless:0 "Toothless Magisters"
  seiran_white_harbour_construction:0 "White Harbour - Under Construction"
+ seiran_influence:0 "Seiranar Influence"
+ seiran_bad_mages:0 "Reduced Mages Influence"
+ seiran_mage_expulsion:0 "Magisters Expelled"
+ seiran_seekers:0 "The Seekers"
+ seiran_artificer_unite_loy:0 "Artificers United"
+ seiran_artificer_unite_inf:0 "Artificers United"
+ seiran_silver_era_mod:0 "Silver Age of Seiranar"
+ seiran_jagged_coast_mod:0 "Jagged Coast of Seiranar"
+ seiran_forest_dev:0 "Seiranar Forest"
+ seiran_our_sea:0 "Our Sea"
+ seiran_empire_of_aurora:0 "Empire of Aurora"
+ seiran_unbreakable_line:0 "Unbreakable Line"
+ seiran_aurora_wall:0 "The Wall of Aurora"
+ seiran_lunarid:0 "Lunarid"
+ seiran_perfect_isolation:0 "Perfect Isolation"
+ seiran_bid_for_emperor:0 "Our Bid for Emperorship"
+ seiran_aurora_anbennar:0 "Anbennar under Aurora"
+ 
+ 
+ 
 
  #Events
  seiran_events.1.t:0 "A New Nation"
@@ -118,6 +173,7 @@
  seiran_events.3.d:0 "Our nation has a grand legacy of commerce, our ships can be seen from Bal Vroren to Portnamm - Should we lean into our strength? or perhaps the ages yet to come will require those funds we spend on our massive ocean fleet find their way into our Army's coffers instead?"
  seiran_events.3.a:0 "Navy - Sea is our Land!"
  seiran_events.3.b:0 "Army - A Nest must be built first!"
+ 
 
  #Custom Tooltips
  seiran_gnomish_vassal:0 "We will create a Vassal in the Dragon Coast Region." #WIP Change to your hearts content
