Lots of stuffs and things

--- a/localisation/AshscaleMissions_l_english.yml
+++ b/localisation/AshscaleMissions_l_english.yml
@@ -89,6 +89,7 @@
 
  #Culture
  zutarzexi_kobold:0 "Zutarzexi Kobold"
+ mecha_dragon_kobold:0 "Mecha-Dragon"
 
  #Custom Tooltips
  ash_claims:0 "Gain permanent claims on §Yall holds§! within the Serpent's Reach."
@@ -116,40 +117,43 @@
 
  #Event(s)
  ash_flavour_events.1.t:0 "Religious Turmoil"
- ash_flavour_events.1.d:0 ""
+ ash_flavour_events.1.d:0 "A many new priests from different religions come into our mountains they are starting to convert the local kobolds, we have to do something about this."
  ash_flavour_events.1.a:0 "The Ravelians are right, it's time for change."
  ash_flavour_events.1.b:0 "The gnomish Religion from the Dragon Coast could be a good middle ground."
  ash_flavour_events.1.c:0 "We cannot fold! We have to find the Dragons and for that the Hoard is everything."
  ash_flavour_events.2.t:0 "Our own Dragon"
- ash_flavour_events.2.d:0 ""
+ ash_flavour_events.2.d:0 "A mad scientist came to us with a proposal for the Dragonforge. He said we should let him use it to build us our very own Dragon, instead of searching for the ones that do not want to be found."
  ash_flavour_events.2.a:0 "Yes, invest in this Project immediatly."
  ash_flavour_events.2.b:0 "No, this is to expensive."
  ash_flavour_events.3.t:0 "A Dragon's Head"
- ash_flavour_events.3.d:0 ""
+ ash_flavour_events.3.d:0 "The Head of the Dragon is arguably the most important part, the scientist approached us and wants to know what Data should get priority in the mechanical Brain of the Dragon."
  ash_flavour_events.3.a:0 "Data to help us administrate our Realm."
  ash_flavour_events.3.b:0 "Data to help us improve our production rates."
  ash_flavour_events.3.c:0 "Data of military encounters to better our armies."
  ash_flavour_events.4.t:0 "A Dragon's Body"
- ash_flavour_events.4.d:0 ""
+ ash_flavour_events.4.d:0 "The scientist came to us to ask about the Dragon's Body and how we intent to use him."
  ash_flavour_events.4.a:0 "Strong arms to help in construction."
  ash_flavour_events.4.b:0 "Make him waterproof so he can help in trade."
- ash_flavour_events.4.c:0 "Reinforce the body so he can help in battle."
+ ash_flavour_events.4.c:0 "Reinforce the body for battle."
  ash_flavour_events.5.t:0 "A Dragon's Tail"
- ash_flavour_events.5.d:0 ""
+ ash_flavour_events.5.d:0 "The last Piece of the Dragon is it's Tail, it is not used for anything in particular right now so we can decide on something unique for it."
  ash_flavour_events.5.a:0 "A golden Tail to show everyone our wealth."
  ash_flavour_events.5.b:0 "Make it fin like to help him swim."
  ash_flavour_events.5.c:0 "A Tail Blade to help in battle!"
  ash_flavour_events.6.t:0 "The Dragon is finished"
- ash_flavour_events.6.d:0 ""
+ ash_flavour_events.6.d:0 "Before you stands a gigantic beast made of metal and wires, what seemed impossible just a few years ago is now reality, we build our own Dragon and it can rival the ones made out of flesh."
  ash_flavour_events.6.a:0 "Now he is only missing a Name!"
  ash_flavour_events.7.t:0 "A Name for a Dragon"
- ash_flavour_events.7.d:0 ""
+ ash_flavour_events.7.d:0 "The Name of the Dragon should be thought about carefully, should it incite fear into our enemy? Show his wisdom? or something different entirely?"
  ash_flavour_events.7.a:0 "The Wise, no mere mortal can gain the knowledge he has."
  ash_flavour_events.7.b:0 "The Alloyed, he is the first."
  ash_flavour_events.7.c:0 "The Eternal, he will rule from now til forever."
  ash_flavour_events.8.t:0 "A new Identity"
- ash_flavour_events.8.d:0 ""
+ ash_flavour_events.8.d:0 "We carved out a good chunk of land for us inside the Serpentsreach, it is time to become a country of our own."
  ash_flavour_events.8.a:0 "Our very own Kingdom!"
+ ash_flavour_events.9.t:0 "Plundering the Camp"
+ ash_flavour_events.9.d:0 "After defeating the Dwarves of the Blackbeard Cartel we found maps of inhabited Holds in the Serpentsreach."
+ ash_flavour_events.9.a:0 "These Maps will be usefull!"
  #Modifier(s)
  ash_dilemma:0 "Prepared to Fight!"
  ash_colonist:0 "Staking Claim"
@@ -179,6 +183,6 @@
  ash_torso_adm:0 "Dragon Torso: Construction"
  ash_torso_dip:0 "Dragon Torso: Trade"
  ash_torso_mil:0 "Dragon Torso: Morale"
- ash_leg_adm:0 "Dragon Tail: Estates"
- ash_leg_dip:0 "Dragon Tail: Steering"
- ash_leg_mil:0 "Dragon Tail: Disciplin"
+ ash_leg_adm:0 "Dragon Tail: Golden"
+ ash_leg_dip:0 "Dragon Tail: Fin"
+ ash_leg_mil:0 "Dragon Tail: Blade"
