--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -189,3 +189,14 @@
  #Province Group
  seiran_jagged_coast_group:0 "The Jagged Coast"
  seiran_giants_grave_sea_coast:0 "Giant's Grave Sea Coast"
+
+ #Factions
+ seiran_tba_a:0 "Tenachern"
+ seiran_tba_b:0 "House Icewind"
+ seiran_tba_c:0 "The Dalassa"
+ seiran_tba_a_influence:0 "Tenachern Influence"
+ seiran_tba_b_influence:0 "House Icewind Influence"
+ seiran_tba_c_influence:0 "Dalassa Influence"
+ seiran_tba_a_FACTION_DESC:0 "Bureaucrats in the service of the Arkon."
+ seiran_tba_b_FACTION_DESC:0 "Commerce Giants, Traders, Philantropists."
+ seiran_tba_c_FACTION_DESC:0 "Generals, Officers, military, at least the elite, professional part."
