--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -6,6 +6,8 @@
  Pearl:0 " "
  great_war_title:0 "The Great War"
  great_war_desc:0 ""
+ subjugate_blue_reach_title:0 "The Blue Reach"
+ subjugate_blue_reach_desc:0 ""
  new_kind_elf_title:0 "A New Kind of Elf"
  new_kind_elf_desc:0 ""
  noble_influential_title:0 "Influential"
@@ -139,7 +141,7 @@
  seiran_serpent_batteries:0 "Serpent Batteries"
  seiran_toothless:0 "Toothless Magisters"
  seiran_white_harbour_construction:0 "White Harbour - Under Construction"
- seiran_influence:0 "Seiranar Influence"
+ seiran_influence:0 "Seiranari Influence"
  seiran_bad_mages:0 "Reduced Mages Influence"
  seiran_mage_expulsion:0 "Magisters Expelled"
  seiran_seekers:0 "The Seekers"
