--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -141,6 +141,7 @@
  seiran_serpent_batteries:0 "Serpent Batteries"
  seiran_toothless:0 "Toothless Magisters"
  seiran_white_harbour_construction:0 "White Harbour - Under Construction"
+ seiran_white_harbour:0 "White Harbour"
  seiran_influence:0 "Seiranari Influence"
  seiran_bad_mages:0 "Reduced Mages Influence"
  seiran_mage_expulsion:0 "Magisters Expelled"
@@ -149,7 +150,7 @@
  seiran_artificer_unite_inf:0 "Artificers United"
  seiran_silver_era_mod:0 "Silver Age of Seiranar"
  seiran_jagged_coast_mod:0 "Jagged Coast of Seiranar"
- seiran_forest_dev:0 "Seiranar Forest"
+ seiran_forest_dev:0 "Deforested Area"
  seiran_our_sea:0 "Our Sea"
  seiran_empire_of_aurora:0 "Empire of Aurora"
  seiran_unbreakable_line:0 "Unbreakable Line"
@@ -158,6 +159,7 @@
  seiran_perfect_isolation:0 "Perfect Isolation"
  seiran_bid_for_emperor:0 "Our Bid for Emperorship"
  seiran_aurora_anbennar:0 "Anbennar under Aurora"
+ seiran_marsh_dev:0 "Drained Marsh"
  
  
  
