Seiranar event loc

--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -177,6 +177,46 @@
  seiran_events.3.d:0 "Our nation has a grand legacy of commerce, our ships can be seen from Bal Vroren to Portnamm - Should we lean into our strength? or perhaps the ages yet to come will require those funds we spend on our massive ocean fleet find their way into our Army's coffers instead?"
  seiran_events.3.a:0 "Navy - Sea is our Land!"
  seiran_events.3.b:0 "Army - A Nest must be built first!"
+ seiran_events.4.t:0 "To Choose our Arkon?"
+ seiran_events.4.d:0 "TBA"
+ seiran_events.4.a:0 "Candidate 1"
+ seiran_events.4.b:0 "Candidate 2"
+ seiran_events.4.c:0 "Candidate 3"
+ seiran_events.5.t:0 "To choose our Dekena?"
+ seiran_events.5.d:0 "TBA"
+ seiran_events.5.a:0 "Ibevar Candidate"
+ seiran_events.5.b:0 "Moonhaven Candidate"
+ seiran_events.5.c:0 "Local Noble"
+ seiran_events.6.t:0 "Silver Era - Setup"
+ seiran_events.6.d:0 "Silver Era - Setup"
+ seiran_events.6.a:0 "Silver Era - Setup"
+ seiran_events.7.t:0 "Silver Era - Finished"
+ seiran_events.7.d:0 "Silver Era - Finished"
+ seiran_events.7.a:0 "Silver Era - Finished"
+ seiran_events.9.t:0 "The White Harbour's construction is finished"
+ seiran_events.9.d:0 "meine mama hat mir einfach erlaubt dass ich cola trinken darf, wie cool ist das bitte?! jetzt zock ich fortnite, und trink cola!"
+ seiran_events.9.a:0 "Jupiiiiiiiiiiiiiiiiiii"
+ seiran_events.10.t:0 "A Grand Century - Our Choice"
+ seiran_events.10.d:0 "TBA"
+ seiran_events.10.a:0 "Isolation, we are at our best on our own."
+ seiran_events.10.b:0 "March on Anbennar, risk be damned!"
+ seiran_events.11.t:0 "Fate of Gerudia"
+ seiran_events.11.d:0 "TBA"
+ seiran_events.11.a:0 "Gerudians can be trusted with their freedom, under our guidance, that is."
+ seiran_events.11.b:0 "Direct control on its lonesome will bring prosperity to the land of eternal winter."
+ seiran_events.12.t:0 "Fiorgam Purchase - Success"
+ seiran_events.12.d:0 "xxx"
+ seiran_events.12.a:0 "xxx"
+ seiran_events.13.t:0 "xxx"
+ seiran_events.13.d:0 "xxx"
+ seiran_events.13.a:0 "xxx"
+ seiran_events.14.t:0 "A Cultural Shift."
+ seiran_events.14.d:0 "TBA"
+ seiran_events.14.a:0 "Arkon of Aurora, Long Live Seiranar!"
+ seiran_events.15.t:0 "Move our capital to Arbefer?"
+ seiran_events.15.d:0 "TBA"
+ seiran_events.15.a:0 "Yes."
+ seiran_events.15.a:0 "No."
  
 
  #Custom Tooltips
