--- a/localisation/anb_ages_l_english.yml
+++ b/localisation/anb_ages_l_english.yml
@@ -47,3 +47,14 @@
  ab_regent_royalists:0 "Regent Royalists"
  ab_cannorian_influences:0 "Cannorian Influences"
  ab_cannorian_influence_tt:0 "Any Ruinborn"
+ ab_a_new_capital:0 "A New Capital?"
+ ab_extensive_bureaucracy:0 "Extensive Bureaucracy"
+ ab_magical_reign:0 "Magical Reign"
+ ab_rebuild_our_island:0 "Rebuild our Island"
+ ab_the_kedaine:0 "The Kedáine"
+ ab_giants_legacy:0 "Giant's Legacy"
+ ab_early_industrie:0 "Early Industry"
+ ab_blackpowder_rebellion:0 "Blackpowder Rebellion"
+ ab_sun_never_sets:0 "A Sun never Sets"
+ ab_wine_perfected:0 "Wine Perfected"
+ ab_halessi_rifles:0 "Halessi Rifles"
