--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -234,13 +234,38 @@
  seiran_jagged_coast_group:0 "The Jagged Coast"
  seiran_giants_grave_sea_coast:0 "Giant's Grave Sea Coast"
 
+ #Culture Name
+ aurora_elf:0 "Aurora Elf"
+
  #Factions
- seiran_tba_a:0 "Tenachern"
+ seiran_tba_a:0 "Tenakern"
  seiran_tba_b:0 "House Icewind"
- seiran_tba_c:0 "The Dalassa"
- seiran_tba_a_influence:0 "Tenachern Influence"
+ seiran_tba_c:0 "The Dalássa"
+ seiran_tba_a_influence:0 "Tenakern Influence"
  seiran_tba_b_influence:0 "House Icewind Influence"
- seiran_tba_c_influence:0 "Dalassa Influence"
- seiran_tba_a_FACTION_DESC:0 "Bureaucrats in the service of the Arkon."
- seiran_tba_b_FACTION_DESC:0 "Commerce Giants, Traders, Philantropists."
- seiran_tba_c_FACTION_DESC:0 "Generals, Officers, military, at least the elite, professional part."
+ seiran_tba_c_influence:0 "Dalássa Influence"
+ seiran_tba_a_FACTION_DESC:0 "Literally 'the Stewards' - Composed of Nobles, Bureaucrats, and Elders, They run Seiranar on a day-to-day basis with the Arkon having a final say on every matter, with quarters in every major settlement, the Tenakern are omnipresent. Most of the powerful men and women of all the Seiranari echelons either come from this class or the Military, naturally - Those with power also wield immense influence."
+ seiran_tba_b_FACTION_DESC:0 "House Icewind represents what our nation used to be - A wealthy, influential, coast-bound elite society, run by Elves - but under heavy Reachmen influence due to the simple number game. These days they are the only opposition our Arkon faces in terms of authority, due to their wealth and influence, not to mention their Princely legacy."
+ seiran_tba_c_FACTION_DESC:0 "'Noble Lances' - All things Military - Officers, Generals, Sergeants, ever pushing for more military spending. Often used by the Arkon to offset any disputes with the other factions."
+
+ #Ideas
+ V08:0 "Seiranar"
+ V08_ADJ:0 "Seiranari"
+ V08_ADJ2:0 "Seiranari"
+ V08_ideas:0 "Seiranari Ideas"
+ V08_ideas_start:0 "Seiranari Traditions"
+ V08_ideas_bonus:0 "Seiranari Ambitions"
+ V08_1:0 "'Helmet for every head'"
+ V08_1_desc:0 "For every problem our military solves, it creates another one, we live longer, giving us a unique opportunity to master the craft further, yet while other races take decades to mature and be ready to serve - We take centuries, and so we have to adapt, starting with Human Auxiliaries, to making sure our society in militant enough to accept losses when they happen, and move on, social policies and norms will whip our people into shape, being a widow is just as unacceptable as cowardice, all must serve."
+ V08_2:0 "'Aldróg' [Pale Stone]"
+ V08_2_desc:0 "A new style of architecture, a mixture of utility and beauty, truly Elven, everpresent arches meet Wood woven as if it were clay or metal, on a solid stone base, warm to match the climate we live in, Arbéfer the prime example of its use."
+ V08_3:0 "'Dalássa' [Noble Lances]"
+ V08_3_desc:0 "Seiranar is unusually reliant on Cavalry, more alike to Sun Elves than our Moon Brethren, starting as every cavalry did, the more wealthy, upper class able to afford a horse or two and better equipment, nowadays they're systematically and universally equipped, rather than a hodgepodge of those well and ill-equipped, we send a wave of men and women wearing their signature scalemail and their lances threefold their height, one and all"
+ V08_4:0 "House Icewind"
+ V08_4_desc:0 "The former rulers of Kelmaldor, now they change the princely diadem for their opulent silk tunics and pouches full of gold, Seiranari Army is paid by Arkon, but Arkon gets half of his income from the Icewinds, mutual prosperity is the name of the game - And when only two parties take part, there is a lot to share."
+ V08_5:0 "Seiréild"
+ V08_5_desc:0 "In life of every Auroran Elf that is a member of any meaningful echelon there comes a time where the comfort of living in a family and their community is exchanged to go on an adventure, one that requires cunning, ambition and a lot of luck - anything can be Seiréild, inventing something, Military success or finding a treasure, the more ambitious the better executed, the more social clout a young She-Elf or He-Elf will have back home."
+ V08_6:0 "The Gilded Court of Seiranar"
+ V08_6_desc:0 "Our court serves two purposes - International prestige and keeping our courtiers in check, when every one of importance either far away in some province or right here in our grasp, it is easy to run Seiranar for our Arkon, smooth sailing, any plot or conspiracy quickly discovered and broken apart, for every wall has an ear behind it, and every keyhole serves as much as a visor as an actual lock."
+ V08_7:0 "A Union of Elves and Else"
+ V08_7_desc:0 "Ours is a country run for the Elves by the Elves, but only a fool would discard the great impact Humans and Halflings to mention a few have had, expatriate gnomes and Orcs, Half-Orcs and Trolls, all living and prospering under our careful guidance, 'From each according to his ability, to each according to his needs' a famous Alenic writer Karlan Maerks has said, we agree - as long as we remain of top of the hierarchy, we care little for the middle and bottom."
