--- a/localisation/cot_rules_events_l_english.yml
+++ b/localisation/cot_rules_events_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
  manpowerRule1:0 "Your Manpower"
  rules_events.2.t:0 "Over Manpower Limit"
- rules_events.2.d:0 "[Root.manpowerRule1.GetName] is [Root.manpowerRule1.GetValue] which is over the maximum allowed x1.5 of your maximum Manpower, as a result of this your manpower will now be cut down to size, you naughty, naughty person >:("
+ rules_events.2.d:0 "[Root.manpowerRule1.GetName] is [Root.manpowerRule1.GetValue] which is over the maximum allowed x1.5 of your maximum Manpower, as a result of this your manpower will now be cut down to size, you naughty, naughty person >:( (Im also taking 1 Ducat as payment for making this Event.)"
  rules_events.2.a:0 "I am sorry, it will never happen again."
