Another Age stuff + Serianar Monarchy

--- a/localisation/anb_ages_l_english.yml
+++ b/localisation/anb_ages_l_english.yml
@@ -52,7 +52,7 @@
  ab_magical_reign:0 "Magical Reign"
  ab_rebuild_our_island:0 "Rebuild our Island"
  ab_the_kedaine:0 "The Kedáine"
- ab_giants_legacy:0 "Giant's Legacy"
+ ab_giants_legacy:0 "Last of the Reavers"
  ab_early_industrie:0 "Early Industry"
  ab_blackpowder_rebellion:0 "Blackpowder Rebellion"
  ab_sun_never_sets:0 "A Sun never Sets"
