Bunch of stuffs

--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -35,7 +35,7 @@ V09_form_lunyrisar_desc:0 "Living side by side with the Ruinborn elves of Haraf 
 V10_form_elvethan_title:0 "The New Order"
 V10_form_elvethan_desc:0 "The Sea Elven Flotilla has arrived."
 
+#Varasók
 
-# Adennor
-V05_form_adennor_title:0 "Proclaim Empire of Adennor"
-V05_form_adennor_desc:0 "Horses go brrrrr"
+V14_form_varasok_title:0 "Embrace the Madness"
+V14_form_varasok_desc:0 "The Song never ended, we just got used to it."
