seiranar gnome mission

--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -160,7 +160,7 @@
  seiran_bid_for_emperor:0 "Our Bid for Emperorship"
  seiran_aurora_anbennar:0 "Anbennar under Aurora"
  seiran_marsh_dev:0 "Drained Marsh"
- 
+ seiran_gnomish_influence:0 "Gnomish Influence"
  
  
 
