--- a/localisation/cot_rules_events_l_english.yml
+++ b/localisation/cot_rules_events_l_english.yml
@@ -3,3 +3,6 @@
  rules_events.2.t:0 "Over Manpower Limit"
  rules_events.2.d:0 "[Root.manpowerRule1.GetName] is [Root.manpowerRule1.GetValue] which is over the maximum allowed x1.5 of your maximum Manpower, as a result of this your manpower will now be cut down to size, you naughty, naughty person >:( (Im also taking 1 Ducat as payment for making this Event.)"
  rules_events.2.a:0 "I am sorry, it will never happen again."
+ rules_events.3.t:0 "Campaign Mutagen"
+ rules_events.3.d:0 "Since you are one of the Chad Players without a Mission Tree, our Lord and Dictator Vaass has granted you a special permanent Modifier, just for you."
+ rules_events.3.a:0 "Thank you, oh wise and powerful Vaass"
