localisation for rp modifiers

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -38,3 +38,10 @@
  mega_damestear:0 "Massive damestear deposit" 
  harimari_absolutism:0 "Harimari Absolutism"
  home_moon_elf:0 "Home for Moon Elves"
+ portnamm_kingmaker:0 "Portnamm - Kingmaker"
+ iochander_funding:0 "Iochander Funding"
+ portnamm_support:0 "Portnamm Support"
+ mad_song_major:0 "Mad Song - Major Depopulation"
+ mad_song_massive:0 "Mad Song - Massive Depopulation"
+ united_by_crisis:0 "United by Crisis"
+ wounded_severe:0 "Wounded - Severe"
