rp save edits part 2 electric boogalloo

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -41,7 +41,11 @@
  portnamm_kingmaker:0 "Portnamm - Kingmaker"
  iochander_funding:0 "Iochander Funding"
  portnamm_support:0 "Portnamm Support"
+ mad_song_minor:0 "Mad Song - Minor Depopulation"
  mad_song_major:0 "Mad Song - Major Depopulation"
  mad_song_massive:0 "Mad Song - Massive Depopulation"
  united_by_crisis:0 "United by Crisis"
  wounded_severe:0 "Wounded - Severe"
+ newfound_unity:0 "Newfound Unity"
+ ashscale_for_progress:0 "For Progress!"
+ university_of_magical_arts:0 "University of Magical Arts"
