:horror: and save edits continue

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -49,3 +49,4 @@
  newfound_unity:0 "Newfound Unity"
  ashscale_for_progress:0 "For Progress!"
  university_of_magical_arts:0 "University of Magical Arts"
+ U18_UNIVERSITY_OF_MAGICAL_ARTS:0 "University of Magical Arts"
