rp edits part 3

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -42,6 +42,7 @@
  iochander_funding:0 "Iochander Funding"
  portnamm_support:0 "Portnamm Support"
  mad_song_minor:0 "Mad Song - Minor Depopulation"
+ mad_song_medium:0 "Mad Song - Medium Depopulation"
  mad_song_major:0 "Mad Song - Major Depopulation"
  mad_song_massive:0 "Mad Song - Massive Depopulation"
  united_by_crisis:0 "United by Crisis"
