rp edits part 5 :)

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -46,8 +46,9 @@
  mad_song_major:0 "Mad Song - Major Depopulation"
  mad_song_massive:0 "Mad Song - Massive Depopulation"
  united_by_crisis:0 "United by Crisis"
+ wounded_light:0 "Wounded - Lightly"
  wounded_severe:0 "Wounded - Severe"
  newfound_unity:0 "Newfound Unity"
  ashscale_for_progress:0 "For Progress!"
  university_of_magical_arts:0 "University of Magical Arts"
- U18_UNIVERSITY_OF_MAGICAL_ARTS:0 "University of Magical Arts"
+ hardened_veterans:0 "Hardened Veterans"
