last save edits before rp-rewards? :OOOOO

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -52,3 +52,7 @@
  ashscale_for_progress:0 "For Progress!"
  university_of_magical_arts:0 "University of Magical Arts"
  hardened_veterans:0 "Hardened Veterans"
+ elven_settlers_venail:0 "Elven Settlers"
+ concessions_given:0 "Concessions Given"
+ perilous_damestear_excavation:0 "Perilous Damestear Excavation"
+ culled_opposition_ashscale:0 "Culled Opposition"
