--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -56,3 +56,4 @@
  concessions_given:0 "Concessions Given"
  perilous_damestear_excavation:0 "Perilous Damestear Excavation"
  culled_opposition_ashscale:0 "Culled Opposition"
+ deforested_province:0 "Deforested Province"
