--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -57,3 +57,8 @@
  perilous_damestear_excavation:0 "Perilous Damestear Excavation"
  culled_opposition_ashscale:0 "Culled Opposition"
  deforested_province:0 "Deforested Province"
+ alchemy_hole:0 "Alchemy Hole"
+ push_for_dalaire:0 "Push for Dalaire"
+ apothecary_princess:0 "Apothecary Princess"
+ siegebreaker_legacy:0 "Siegebraeker Legacy"
+ bulwark_of_freedom:0 "Bulwark of Freedom"
