--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -36,6 +36,9 @@ V10_form_elvethan_title:0 "The New Order"
 V10_form_elvethan_desc:0 "The Sea Elven Flotilla has arrived."
 
 #Varasók
-
 V14_form_varasok_title:0 "Embrace the Madness"
 V14_form_varasok_desc:0 "The Song never ended, we just got used to it."
+
+#Daccasded
+V15_form_daccasded_title:0 "Accept gnomish Rule"
+V15_form_daccasded_desc:0 "After the drought it was clear that the Gnomes are better suited to rule us then we are to rule ourselves, if it were not for them we all would have starved."
