--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -196,3 +196,10 @@ V09_7_desc:0 ""
  V11_6_desc:0 "From Nagar and Nakar, to the imperial capital in Urvald or the colonial metropolises of the Kheonai, Thaychend is home to a vast number of great cities each rivalling each other in splendor, competing to outgrow the others. Yet, this is only the beginning. A new golden age is upon us, and the cities of tomorrow shall make mockeries of the cities of today."
  V11_7:0 "Gods of Taychend"
  V11_7_desc:0 "Perhaps even more varied than the peoples of Taychend, is the many different religions and philosophies that its people follow. We have united all of these in the syncretic teachings of the Ashesuìr - the recognition of Ruinborn superiority for having survived, even prospered, after the wake of the Day of Ashen Skies. The is a role for all other peoples and teachings in this order, but it is serving us, the true masters of Aelentir."
+
+ V15:0 "Daccasded"
+ V15_ADJ:0 "Daccasdedi"
+ V15_ADJ2:0 "Daccasdedi"
+ V15_ideas:0 "Daccasdedi Ideas"
+ V15_ideas_start:0 "Daccasdedi Traditions"
+ V15_ideas_bonus:0 "Daccasdedi Ambitions"
