--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -62,3 +62,5 @@
  apothecary_princess:0 "Apothecary Princess"
  siegebreaker_legacy:0 "Siegebraeker Legacy"
  bulwark_of_freedom:0 "Bulwark of Freedom"
+ daccasded_drought_to_end_droughts:0 "Recovering from a Drought to end all Droughts"
+ daccasded_desalinated_irrigation:0 "Desalinated Irrigation"
