save-edits ahoy

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -64,3 +64,4 @@
  bulwark_of_freedom:0 "Bulwark of Freedom"
  daccasded_drought_to_end_droughts:0 "Recovering from a Drought to end all Droughts"
  daccasded_desalinated_irrigation:0 "Desalinated Irrigation"
+ GWYN_NAME:0 "Segbandal"
