delete map stuff

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -65,3 +65,5 @@
  daccasded_drought_to_end_droughts:0 "Recovering from a Drought to end all Droughts"
  daccasded_desalinated_irrigation:0 "Desalinated Irrigation"
  GWYN_NAME:0 "Segbandal"
+ GWYN_NAME_ADJ:0 "Segbandali"
+ GWYN_NAME_ADJ2:0 "Segbandali"
