--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -203,3 +203,17 @@ V09_7_desc:0 ""
  V15_ideas:0 "Daccasdedi Ideas"
  V15_ideas_start:0 "Daccasdedi Traditions"
  V15_ideas_bonus:0 "Daccasdedi Ambitions"
+ V15_1:0 "Akani Resillience"
+ V15_1_desc:0 ""
+ V15_2:0 "The Isle of Tef"
+ V15_2_desc:0 ""
+ V15_3:0 "Escape to Paradise"
+ V15_3_desc:0 ""
+ V15_4:0 "Cultivating the harsh lands"
+ V15_4_desc:0 ""
+ V15_5:0 "Gnollish Auxilliaries"
+ V15_5_desc:0 ""
+ V15_6:0 "Peace of Akan"
+ V15_6_desc:0 ""
+ V15_7:0 "Memories of the Civil War"
+ V15_7_desc:0 ""
