--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -67,3 +67,42 @@
  GWYN_NAME:0 "Segbandal"
  GWYN_NAME_ADJ:0 "Segbandali"
  GWYN_NAME_ADJ2:0 "Segbandali"
+ Z63_new_capital:0 "New Capital"
+ Z63_palace:0 "Grand Palace"
+ Z63_imperial_guard:0 "Imperial Guard Quarters"
+ break_bones:0 "Break thy Bones"
+ exhausted_mil:0 "Exhausted Military"
+ H01_season_turmoil:0 "Season Turmoil"
+ Y15_no_aelantir:0 "Aelantirophobia"
+ tolerant_policies:0 "Tolerant Policies"
+ B50_dwarven_armour:0 "Dwarven Armor"
+ B33_mithril_production:0 "Mithril Mine"
+ B33_orlghelovar_glass:0 "Orlghelovar Glass-Making Tools"
+ B33_stolen_tools:0 "Stolen Tools"
+ mutagen_U08_unraveling:0 "Rising Industry"
+ mutagen_H74_unraveling:0 "Metallurgic Breakthrough"
+ mutagen_H76_unraveling:0 "Rising Industry"
+ mutagen_V14_unraveling:0 "Rising Industry"
+ mutagen_F47_unraveling:0 "Rising Industry"
+ mutagen_R74_unraveling:0 "Rising Industry"
+ mutagen_H32_unraveling:0 "Rising Industry"
+ mutagen_H32_unraveling:0 "Refuge from the Far West"
+ mutagen_G96_unraveling:0 "Cutting down the Jungle"
+ mutagen_A62_unraveling:0 "Weapon Mass Production"
+ mutagen_Y51_unraveling:0 "Realm between Rivers"
+ mutagen_C04_unraveling:0 "Rising Industry"
+ mutagen_C02_unraveling:0 "New World Trade"
+ mutagen_U08_witch:0 "Loyal Army"
+ mutagen_H74_witch:0 "Goblins in an Undead Army"
+ mutagen_H76_witch:0 "Dwarven Cannons"
+ mutagen_V14_witch:0 "Loyal Army"
+ mutagen_R74_witch:0 "Cheap Soldiers"
+ mutagen_H32_witch:0 "Loyal Army"
+ mutagen_G95_witch:0 "Arannen Gun Imports"
+ mutagen_G96_witch:0 "Wars with the Kheios"
+ mutagen_A62_witch:0 "Learning from the Northern Wars"
+ mutagen_Y51_witch:0 "Jungle Warfare"
+ mutagen_F47_witch:0 "Loyal Army"
+ mutagen_C04_witch:0 "Strong Army"
+ mutagen_C02_witch:0 "New Wineportian Army"
+ 
