Corvuria Prov adj

--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -5625,14 +5625,14 @@
  PROV_ADJPROV6685:0 "River Korbar"
  PROV_ADJPROV6686:0 "River Korbar"
  PROV_ADJPROV6687:0 "River Korbar"
- PROV_ADJPROV6688:0 "Corvun"
- PROV_ADJPROV6689:0 "Malignant Hovel"
- PROV_ADJPROV6690:0 "Kobarmouth"
- PROV_ADJPROV6691:0 "Kerten"
+ PROV_ADJPROV6688:0 "Corvuner"
+ PROV_ADJPROV6689:0 "Malignant Hovelian"
+ PROV_ADJPROV6690:0 "Kobarmouther"
+ PROV_ADJPROV6691:0 "Kertener"
  PROV_ADJPROV6692:0 "TBA_A"
- PROV_ADJPROV6693:0 "Sokross"
- PROV_ADJPROV6694:0 "Daravan's Rest"
- PROV_ADJPROV6695:0 "Cursemarch"
- PROV_ADJPROV6696:0 "Barkguard"
- PROV_ADJPROV6697:0 "Silversight"
- PROV_ADJPROV6698:0 "Tynfeld"
+ PROV_ADJPROV6693:0 "Sokrosser"
+ PROV_ADJPROV6694:0 "Daravan's Restan"
+ PROV_ADJPROV6695:0 "Cursemarcher"
+ PROV_ADJPROV6696:0 "Barkguarder"
+ PROV_ADJPROV6697:0 "Silversighter"
+ PROV_ADJPROV6698:0 "Tynfeldian"
