--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -42,3 +42,7 @@ V14_form_varasok_desc:0 "The Song never ended, we just got used to it."
 #Daccasded
 V15_form_daccasded_title:0 "Accept gnomish Rule"
 V15_form_daccasded_desc:0 "After the drought it was clear that the Gnomes are better suited to rule us then we are to rule ourselves, if it were not for them we all would have starved."
+
+#Caerdyn
+V16_form_caerdyn_title:0 "The Ynn United"
+V16_form_caerdyn_desc:0 "We came as refugees and became conquerors and now we have to be rulers."
