--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -217,3 +217,7 @@ V09_7_desc:0 ""
  V15_6_desc:0 ""
  V15_7:0 "Memories of the Civil War"
  V15_7_desc:0 ""
+
+ V16:0 "Caerdyn"
+ V16_ADJ:0 "Caerdyner"
+ V16_ADJ2:0 "Caerdyner"
