--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -105,4 +105,6 @@
  mutagen_F47_witch:0 "Loyal Army"
  mutagen_C04_witch:0 "Strong Army"
  mutagen_C02_witch:0 "New Wineportian Army"
+ V16_masquerade:0 "Caerdyner Masquerade"
+ V16_blood_sire:0 "Blood-Sire of Aelantir"
  
