--- a/localisation/anb_areas_l_english.yml
+++ b/localisation/anb_areas_l_english.yml
@@ -3646,3 +3646,6 @@
  south_dreadmire_area:0 "South Dreadmire"
  south_dreadmire_area_name:0 "South Dreadmire"
  south_dreadmire_area_adj:0 "South Dreadmirer"
+ gem_isle_area:0 "Gem Isle"
+ gem_isle_area_name:0 "Gem Isle"
+ gem_isle_area_adj:0 "Gem Islander"
