--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -5636,3 +5636,4 @@
  PROV_ADJPROV6696:0 "Barkguarder"
  PROV_ADJPROV6697:0 "Silversighter"
  PROV_ADJPROV6698:0 "Tynfeldian"
+ PROV_ADJPROV6698:0 "Eastern Gem Islander"
