--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -5724,6 +5724,7 @@
  PROV6696:0 "Barkguard"
  PROV6697:0 "Silversight"
  PROV6698:0 "Tynfeld"
+ PROV6699:0 "Eastern Gem Isle"
  PROV_province_name:0 "Anbennar_province_name"
  PROVr_province_name:0 "Anbennarr_province_name"
  PROV_prov_straits_of:0 "Anbennar_prov_straits_of"
