Roy is name now yup

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -5725,6 +5725,10 @@
  PROV6697:0 "Silversight"
  PROV6698:0 "Tynfeld"
  PROV6699:0 "Eastern Gem Isle"
+ PROV6700:0 "River Roy"
+ PROV6701:0 "River Roy"
+ PROV6702:0 "River Roy"
+ PROV6703:0 "River Roy"
  PROV_province_name:0 "Anbennar_province_name"
  PROVr_province_name:0 "Anbennarr_province_name"
  PROV_prov_straits_of:0 "Anbennar_prov_straits_of"
