--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -5729,6 +5729,12 @@
  PROV6701:0 "River Roy"
  PROV6702:0 "River Roy"
  PROV6703:0 "River Roy"
+ PROV6704:0 "Test"
+ PROV6705:0 "Test"
+ PROV6706:0 "Test"
+ PROV6707:0 "Test"
+ PROV6708:0 "Test"
+ PROV6709:0 "Test"
  PROV_province_name:0 "Anbennar_province_name"
  PROVr_province_name:0 "Anbennarr_province_name"
  PROV_prov_straits_of:0 "Anbennar_prov_straits_of"
