Last Save-edits

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -107,4 +107,5 @@
  mutagen_C02_witch:0 "New Wineportian Army"
  V16_masquerade:0 "Caerdyner Masquerade"
  V16_blood_sire:0 "Blood-Sire of Aelantir"
+ G95_circle:0 "Adeline's Inner Circle"
  
