Added Verkal Ozovar Caverns and Roads
(Approved by Chaddox)

--- a/localisation/anb_areas_l_english.yml
+++ b/localisation/anb_areas_l_english.yml
@@ -3649,3 +3649,18 @@
  gem_isle_area:0 "Gem Isle"
  gem_isle_area_name:0 "Gem Isle"
  gem_isle_area_adj:0 "Gem Islander"
+ phokao_caverns_area:0 "Phokao Caverns"
+ phokao_caverns_area_name:0 "Phokao Caverns"
+ phokao_caverns_area_adj:0 "Phokao Caverner"
+ ozumrod_1_3_area:0 "Ozumrod [1-3]"
+ ozumrod_1_3_area_name:0 "Ozumrod [1-3]"
+ ozumrod_1_3_area_area_adj:0 "Ozumrod [1-3]"
+ ozumrod_4_6_area:0 "Ozumrod [4-6]"
+ ozumrod_4_6_area_name:0 "Ozumrod [4-6]"
+ ozumrod_4_6_area_area_adj:0 "Ozumrod [4-6]"
+ ozumrod_7_9_area:0 "Ozumrod [7-9]"
+ ozumrod_7_9_area_name:0 "Ozumrod [7-9]"
+ ozumrod_7_9_area_adj:0 "Ozumrod [7-9]"
+ ozumrod_10_11_area:0 "Ozumrod [10-11]"
+ ozumrod_10_11_area_name:0 "Ozumrod [10-11]"
+ ozumrod_10_11_area_adj:0 "Ozumrod [10-11]"
