--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -5735,6 +5735,21 @@
  PROV6707:0 "Test"
  PROV6708:0 "Test"
  PROV6709:0 "Test"
+ PROV6710:0 "Ozumrod [1]"
+ PROV6711:0 "Ozumrod [2]"
+ PROV6712:0 "Ozumrod [3]"
+ PROV6713:0 "Ozumrod [4]"
+ PROV6714:0 "Ozumrod [5]"
+ PROV6715:0 "Ozumrod [6]"
+ PROV6716:0 "Ozumrod [7]"
+ PROV6717:0 "Ozumrod [8]"
+ PROV6718:0 "Ozumrod [9]"
+ PROV6719:0 "Ozumrod [10]"
+ PROV6720:0 "Ozumrod [11]"
+ PROV6721:0 "Imposters Cove"
+ PROV6722:0 "Pillars Cavern"
+ PROV6723:0 "Lit Shaft"
+ PROV6724:0 "Wizard's Den"
  PROV_province_name:0 "Anbennar_province_name"
  PROVr_province_name:0 "Anbennarr_province_name"
  PROV_prov_straits_of:0 "Anbennar_prov_straits_of"
