--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -5729,11 +5729,11 @@
  PROV6701:0 "River Roy"
  PROV6702:0 "River Roy"
  PROV6703:0 "River Roy"
- PROV6704:0 "Test"
- PROV6705:0 "Test"
- PROV6706:0 "Test"
- PROV6707:0 "Test"
- PROV6708:0 "Test"
+ PROV6704:0 "Tideharbour"
+ PROV6705:0 "Newport"
+ PROV6706:0 "Towerhill"
+ PROV6707:0 "Varwood"
+ PROV6708:0 "Earshore"
  PROV6709:0 "Test"
  PROV6710:0 "Ozumrod [1]"
  PROV6711:0 "Ozumrod [2]"
