--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -5734,7 +5734,7 @@
  PROV6706:0 "Towerhill"
  PROV6707:0 "Varwood"
  PROV6708:0 "Earshore"
- PROV6709:0 "Test"
+ PROV6709:0 "Garcóst"
  PROV6710:0 "Ozumrod [1]"
  PROV6711:0 "Ozumrod [2]"
  PROV6712:0 "Ozumrod [3]"
