Lorentaine part two

--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -203,3 +203,10 @@ V09_7_desc:0 ""
  V15_ideas:0 "Daccasdedi Ideas"
  V15_ideas_start:0 "Daccasdedi Traditions"
  V15_ideas_bonus:0 "Daccasdedi Ambitions"
+
+ V16:0 "Lorentainé"
+ V16_ADJ:0 "Lorentainér"
+ V16_ADJ2:0 "Lorentainér"
+ V16_ideas:0 "Lorentainér Ideas"
+ V16_ideas_start:0 "Lorentainér Traditions"
+ V16_ideas_bonus:0 "Lorentainér Ambitions"
