Revert "Revert "Add files via upload""
This reverts commit 934b3472031353ba53905b6aff23f2538fa1adb9.

--- a/localisation/tellum_monuments_effects_l_english.yml
+++ b/localisation/tellum_monuments_effects_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
 new_ideas: "New Ideas"
-#new_ideas_desc: "The Great Library's influence has risen to the international stage. Many foreign teachers have come to share their wisdom."
+new_ideas_desc: "The Great Library's influence has risen to the international stage. Many foreign teachers have come to share their wisdom."
 
 the_beauty_of_an_empire: "The Beauty of an Empire"
 the_beauty_of_an_empire_desc: "The sight of the expanded Hanging Gardens brings tears to the eyes of those who witness it. The empire's citizens are reinvigorated and awestruck by its beauty."
@@ -118,7 +118,7 @@ legacy_of_kongjian: "Legacy of Kongjian"
 legacy_of_kongjian_desc: "Our ancestral weapon will be ours forever."
 
 rebirth_of_yanshen: "Rebirth of Yanshen"
-#new_ideas_desc: "Our nation has been through too much in this era. Though, it all comes to an end now. Yanshen will rise to greater heights than ever before."
+new_ideas_desc: "Our nation has been through too much in this era. Though, it all comes to an end now. Yanshen will rise to greater heights than ever before."
 
 follow_our_heart: "Follow Our Heart"
 follow_our_heart_desc: "Follow Our Heart"
