--- a/localisation/tellum_monuments_l_english.yml
+++ b/localisation/tellum_monuments_l_english.yml
@@ -92,6 +92,10 @@ the_first_wonder_pyramids_of_khet_title: "Pyramids of Khet"
 the_first_wonder_pyramids_of_khet: "Pyramids of Khet"
 great_project_the_first_wonder_pyramids_of_khet: "Pyramids of Khet"
 
+the_great_library_title: "The Great Library"
+the_great_library: "The Great Library"
+great_project_the_great_library: "The Great Library"
+
 the_zornartakel_title: "The Zornartakel"
 the_zornartakel: "The Zornartakel"
 great_project_the_zornartakel: "The Zornartakel"
@@ -140,6 +144,10 @@ battlemage_academy_of_lorent_title: "Battlemage Academy of Lorent"
 battlemage_academy_of_lorent: "Battlemage Academy of Lorent"
 great_project_battlemage_academy_of_lorent: "Battlemage Academy of Lorent"
 
+the_great_library_title: "The Great Library"
+the_great_library: "The Great Library"
+great_project_the_great_library: "The Great Library"
+
 alenic_glass_the_northern_guild_title: "Alenic Glass, The Northern Guild"
 alenic_glass_the_northern_guild: "Alenic Glass, The Northern Guild"
 great_project_alenic_glass_the_northern_guild: "Alenic Glass, The Northern Guild"
@@ -152,11 +160,16 @@ the_keepers_vault_title: "The Keepers Vault"
 the_keepers_vault: "The Keepers Vault"
 great_project_the_keepers_vault: "The Keepers Vault"
 
+the_great_library_title: "The Great Library"
+the_great_library: "The Great Library"
+great_project_the_great_library: "The Great Library"
+
 the_jade_palace_title: "The Jade Palace"
 the_jade_palace: "The Jade Palace"
 great_project_the_jade_palace: "The Jade Palace"
 
 
+rial_thae_the_nobles_tea_room: "Rhial Thae, The Noble's Tea Room"
 rial_thae_the_nobles_tea_room: "Rhial Thae, The Noble's Tea Room"
 great_project_rial_thae_the_nobles_tea_room: "Rhial Thae, The Noble's Tea Room"
 
